@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -13,13 +13,12 @@
 package org.openhab.binding.airquality.internal.handler;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
 import org.openhab.binding.airquality.internal.api.ApiBridge;
 import org.openhab.binding.airquality.internal.discovery.AirQualityDiscoveryService;
-import org.openhab.core.i18n.LocationProvider;
 import org.openhab.core.thing.Bridge;
 import org.openhab.core.thing.ChannelUID;
 import org.openhab.core.thing.ThingStatus;
@@ -36,12 +35,10 @@ import org.openhab.core.types.Command;
  */
 @NonNullByDefault
 public class AirQualityBridgeHandler extends BaseBridgeHandler {
-    private final LocationProvider locationProvider;
     private @Nullable ApiBridge apiBridge;
 
-    public AirQualityBridgeHandler(Bridge bridge, LocationProvider locationProvider) {
+    public AirQualityBridgeHandler(Bridge bridge) {
         super(bridge);
-        this.locationProvider = locationProvider;
     }
 
     @Override
@@ -67,10 +64,6 @@ public class AirQualityBridgeHandler extends BaseBridgeHandler {
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singleton(AirQualityDiscoveryService.class);
-    }
-
-    public LocationProvider getLocationProvider() {
-        return locationProvider;
+        return Set.of(AirQualityDiscoveryService.class);
     }
 }
