@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -15,14 +15,13 @@ package org.openhab.binding.harmonyhub.internal.handler;
 import static org.openhab.binding.harmonyhub.internal.HarmonyHubBindingConstants.*;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
-import org.openhab.binding.harmonyhub.internal.HarmonyHubHandlerFactory;
+import org.openhab.binding.harmonyhub.internal.HarmonyHubDynamicTypeProvider;
 import org.openhab.binding.harmonyhub.internal.config.HarmonyDeviceConfig;
 import org.openhab.core.library.types.StringType;
 import org.openhab.core.thing.Bridge;
@@ -65,15 +64,15 @@ public class HarmonyDeviceHandler extends BaseThingHandler {
 
     private final Logger logger = LoggerFactory.getLogger(HarmonyDeviceHandler.class);
 
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections.singleton(HARMONY_DEVICE_THING_TYPE);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(HARMONY_DEVICE_THING_TYPE);
 
-    private HarmonyHubHandlerFactory factory;
+    private final HarmonyHubDynamicTypeProvider typeProvider;
 
     private @NonNullByDefault({}) HarmonyDeviceConfig config;
 
-    public HarmonyDeviceHandler(Thing thing, HarmonyHubHandlerFactory factory) {
+    public HarmonyDeviceHandler(Thing thing, HarmonyHubDynamicTypeProvider typeProvider) {
         super(thing);
-        this.factory = factory;
+        this.typeProvider = typeProvider;
     }
 
     protected @Nullable HarmonyHubHandler getHarmonyHubHandler() {
@@ -142,8 +141,9 @@ public class HarmonyDeviceHandler extends BaseThingHandler {
     }
 
     @Override
-    public void dispose() {
-        factory.removeChannelTypesForThing(getThing().getUID());
+    public void handleRemoval() {
+        typeProvider.removeChannelTypesForThing(getThing().getUID());
+        super.handleRemoval();
     }
 
     /**
@@ -190,7 +190,7 @@ public class HarmonyDeviceHandler extends BaseThingHandler {
                 .withStateDescriptionFragment(StateDescriptionFragmentBuilder.create().withOptions(states).build())
                 .build();
 
-        factory.addChannelType(channelType);
+        typeProvider.putChannelType(channelType);
 
         Channel channel = ChannelBuilder.create(new ChannelUID(getThing().getUID(), CHANNEL_BUTTON_PRESS), "String")
                 .withType(channelTypeUID).build();
