@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -16,6 +16,7 @@ import static org.openhab.binding.hue.internal.HueBindingConstants.*;
 import static org.openhab.core.thing.Thing.*;
 
 import java.io.IOException;
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
@@ -24,6 +25,7 @@ import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.Future;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
@@ -33,22 +35,23 @@ import java.util.stream.Collectors;
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
 import org.eclipse.jetty.client.HttpClient;
+import org.openhab.binding.hue.internal.api.dto.clip1.ApiVersionUtils;
+import org.openhab.binding.hue.internal.api.dto.clip1.Config;
+import org.openhab.binding.hue.internal.api.dto.clip1.ConfigUpdate;
+import org.openhab.binding.hue.internal.api.dto.clip1.FullConfig;
+import org.openhab.binding.hue.internal.api.dto.clip1.FullGroup;
+import org.openhab.binding.hue.internal.api.dto.clip1.FullLight;
+import org.openhab.binding.hue.internal.api.dto.clip1.FullSensor;
+import org.openhab.binding.hue.internal.api.dto.clip1.Scene;
+import org.openhab.binding.hue.internal.api.dto.clip1.State;
+import org.openhab.binding.hue.internal.api.dto.clip1.StateUpdate;
 import org.openhab.binding.hue.internal.config.HueBridgeConfig;
 import org.openhab.binding.hue.internal.connection.HueBridge;
 import org.openhab.binding.hue.internal.connection.HueTlsTrustManagerProvider;
 import org.openhab.binding.hue.internal.discovery.HueDeviceDiscoveryService;
-import org.openhab.binding.hue.internal.dto.ApiVersionUtils;
-import org.openhab.binding.hue.internal.dto.Config;
-import org.openhab.binding.hue.internal.dto.ConfigUpdate;
-import org.openhab.binding.hue.internal.dto.FullConfig;
-import org.openhab.binding.hue.internal.dto.FullGroup;
-import org.openhab.binding.hue.internal.dto.FullLight;
-import org.openhab.binding.hue.internal.dto.FullSensor;
-import org.openhab.binding.hue.internal.dto.Scene;
-import org.openhab.binding.hue.internal.dto.State;
-import org.openhab.binding.hue.internal.dto.StateUpdate;
 import org.openhab.binding.hue.internal.exceptions.ApiException;
 import org.openhab.binding.hue.internal.exceptions.DeviceOffException;
+import org.openhab.binding.hue.internal.exceptions.EmptyResponseException;
 import org.openhab.binding.hue.internal.exceptions.EntityNotAvailableException;
 import org.openhab.binding.hue.internal.exceptions.LinkButtonException;
 import org.openhab.binding.hue.internal.exceptions.UnauthorizedException;
@@ -56,8 +59,6 @@ import org.openhab.core.config.core.Configuration;
 import org.openhab.core.config.core.status.ConfigStatusMessage;
 import org.openhab.core.i18n.CommunicationException;
 import org.openhab.core.i18n.ConfigurationException;
-import org.openhab.core.i18n.LocaleProvider;
-import org.openhab.core.i18n.TranslationProvider;
 import org.openhab.core.io.net.http.TlsTrustManagerProvider;
 import org.openhab.core.library.types.HSBType;
 import org.openhab.core.library.types.OnOffType;
@@ -106,8 +107,6 @@ public class HueBridgeHandler extends ConfigStatusBridgeHandler implements HueCl
     private @Nullable ServiceRegistration<?> serviceRegistration;
     private final HttpClient httpClient;
     private final HueStateDescriptionProvider stateDescriptionOptionProvider;
-    private final TranslationProvider i18nProvider;
-    private final LocaleProvider localeProvider;
 
     private final Map<String, FullLight> lastLightStates = new ConcurrentHashMap<>();
     private final Map<String, FullSensor> lastSensorStates = new ConcurrentHashMap<>();
@@ -117,6 +116,9 @@ public class HueBridgeHandler extends ConfigStatusBridgeHandler implements HueCl
     private final Map<String, LightStatusListener> lightStatusListeners = new ConcurrentHashMap<>();
     private final Map<String, SensorStatusListener> sensorStatusListeners = new ConcurrentHashMap<>();
     private final Map<String, GroupStatusListener> groupStatusListeners = new ConcurrentHashMap<>();
+
+    private List<Scene> lastScenes = new CopyOnWriteArrayList<>();
+    private Instant lastScenesRetrieval = Instant.MIN;
 
     final ReentrantLock pollingLock = new ReentrantLock();
 
@@ -150,6 +152,9 @@ public class HueBridgeHandler extends ConfigStatusBridgeHandler implements HueCl
                     lastBridgeConnectionState = false;
                     onConnectionLost();
                 }
+            } catch (EmptyResponseException e) {
+                // Unexpected empty response is ignored
+                logger.debug("{}", e.getMessage());
             } catch (ApiException | CommunicationException | IOException e) {
                 if (hueBridge != null && lastBridgeConnectionState) {
                     logger.debug("Connection to Hue Bridge {} lost: {}", hueBridge.getIPAddress(), e.getMessage(), e);
@@ -226,7 +231,7 @@ public class HueBridgeHandler extends ConfigStatusBridgeHandler implements HueCl
                     sensorStatusListener.onSensorRemoved();
                 }
 
-                if (discovery != null && sensor != null) {
+                if (discovery != null) {
                     discovery.removeSensorDiscovery(sensor);
                 }
             });
@@ -238,6 +243,10 @@ public class HueBridgeHandler extends ConfigStatusBridgeHandler implements HueCl
         protected void doConnectedRun() throws IOException, ApiException {
             updateLights();
             updateGroups();
+            if (lastScenesRetrieval.isBefore(Instant.now().minusSeconds(SCENE_POLLING_INTERVAL))) {
+                updateScenes();
+                lastScenesRetrieval = Instant.now();
+            }
         }
 
         private void updateLights() throws IOException, ApiException {
@@ -282,7 +291,7 @@ public class HueBridgeHandler extends ConfigStatusBridgeHandler implements HueCl
                     lightStatusListener.onLightRemoved();
                 }
 
-                if (discovery != null && light != null) {
+                if (discovery != null) {
                     discovery.removeLightDiscovery(light);
                 }
             });
@@ -372,32 +381,28 @@ public class HueBridgeHandler extends ConfigStatusBridgeHandler implements HueCl
                     groupStatusListener.onGroupRemoved();
                 }
 
-                if (discovery != null && group != null) {
+                if (discovery != null) {
                     discovery.removeGroupDiscovery(group);
                 }
             });
         }
-    };
 
-    private final Runnable scenePollingRunnable = new PollingRunnable() {
-        @Override
-        protected void doConnectedRun() throws IOException, ApiException {
-            List<Scene> scenes = hueBridge.getScenes();
-            logger.trace("Scenes detected: {}", scenes);
+        private void updateScenes() throws IOException, ApiException {
+            lastScenes = hueBridge.getScenes();
+            logger.trace("Scenes detected: {}", lastScenes);
 
-            setBridgeSceneChannelStateOptions(scenes, lastGroupStates);
-            notifyGroupSceneUpdate(scenes);
+            setBridgeSceneChannelStateOptions(lastScenes, lastGroupStates);
+            notifyGroupSceneUpdate(lastScenes);
         }
 
         private void setBridgeSceneChannelStateOptions(List<Scene> scenes, Map<String, FullGroup> groups) {
             Map<String, String> groupNames = groups.entrySet().stream()
                     .collect(Collectors.toMap(Map.Entry::getKey, e -> e.getValue().getName()));
-            List<StateOption> stateOptions = scenes.stream().map(scene -> scene.toStateOption(groupNames))
-                    .collect(Collectors.toList());
+            List<StateOption> stateOptions = scenes.stream().map(scene -> scene.toStateOption(groupNames)).toList();
             stateDescriptionOptionProvider.setStateOptions(new ChannelUID(getThing().getUID(), CHANNEL_SCENE),
                     stateOptions);
             consoleScenesList = scenes.stream().map(scene -> "Id is \"" + scene.getId() + "\" for scene \""
-                    + scene.toStateOption(groupNames).getLabel() + "\"").collect(Collectors.toList());
+                    + scene.toStateOption(groupNames).getLabel() + "\"").toList();
         }
     };
 
@@ -408,7 +413,6 @@ public class HueBridgeHandler extends ConfigStatusBridgeHandler implements HueCl
     private @Nullable Future<?> initJob;
     private @Nullable ScheduledFuture<?> lightPollingJob;
     private @Nullable ScheduledFuture<?> sensorPollingJob;
-    private @Nullable ScheduledFuture<?> scenePollingJob;
 
     private @NonNullByDefault({}) HueBridge hueBridge = null;
     private @NonNullByDefault({}) HueBridgeConfig hueBridgeConfig = null;
@@ -416,13 +420,10 @@ public class HueBridgeHandler extends ConfigStatusBridgeHandler implements HueCl
     private List<String> consoleScenesList = new ArrayList<>();
 
     public HueBridgeHandler(Bridge bridge, HttpClient httpClient,
-            HueStateDescriptionProvider stateDescriptionOptionProvider, TranslationProvider i18nProvider,
-            LocaleProvider localeProvider) {
+            HueStateDescriptionProvider stateDescriptionOptionProvider) {
         super(bridge);
         this.httpClient = httpClient;
         this.stateDescriptionOptionProvider = stateDescriptionOptionProvider;
-        this.i18nProvider = i18nProvider;
-        this.localeProvider = localeProvider;
     }
 
     @Override
@@ -656,23 +657,6 @@ public class HueBridgeHandler extends ConfigStatusBridgeHandler implements HueCl
         sensorPollingJob = null;
     }
 
-    private void startScenePolling() {
-        ScheduledFuture<?> job = scenePollingJob;
-        if (job == null || job.isCancelled()) {
-            // Delay the first execution to give a chance to have all group things registered
-            scenePollingJob = scheduler.scheduleWithFixedDelay(scenePollingRunnable, 5, SCENE_POLLING_INTERVAL,
-                    TimeUnit.SECONDS);
-        }
-    }
-
-    private void stopScenePolling() {
-        ScheduledFuture<?> job = scenePollingJob;
-        if (job != null) {
-            job.cancel(true);
-        }
-        scenePollingJob = null;
-    }
-
     @Override
     public void dispose() {
         logger.debug("Disposing Hue Bridge handler ...");
@@ -682,7 +666,6 @@ public class HueBridgeHandler extends ConfigStatusBridgeHandler implements HueCl
         }
         stopLightPolling();
         stopSensorPolling();
-        stopScenePolling();
         if (hueBridge != null) {
             hueBridge = null;
         }
@@ -745,7 +728,6 @@ public class HueBridgeHandler extends ConfigStatusBridgeHandler implements HueCl
     private synchronized void onUpdate() {
         startLightPolling();
         startSensorPolling();
-        startScenePolling();
     }
 
     /**
@@ -810,7 +792,6 @@ public class HueBridgeHandler extends ConfigStatusBridgeHandler implements HueCl
      * If there is a user name available, it attempts to re-authenticate. Otherwise new authentication credentials will
      * be requested from the bridge.
      *
-     * @param bridge the Hue Bridge the connection is not authorized
      * @return returns {@code true} if re-authentication was successful, {@code false} otherwise
      */
     public boolean onNotAuthenticated() {
@@ -963,6 +944,9 @@ public class HueBridgeHandler extends ConfigStatusBridgeHandler implements HueCl
             final FullGroup lastGroupState = lastGroupStates.get(groupId);
             if (lastGroupState != null) {
                 groupStatusListener.onGroupAdded(lastGroupState);
+                if (!lastScenes.isEmpty()) {
+                    groupStatusListener.onScenesUpdated(lastScenes);
+                }
             }
             return true;
         }
@@ -1087,13 +1071,5 @@ public class HueBridgeHandler extends ConfigStatusBridgeHandler implements HueCl
         } else {
             return List.of();
         }
-    }
-
-    public TranslationProvider getI18nProvider() {
-        return i18nProvider;
-    }
-
-    public LocaleProvider getLocaleProvider() {
-        return localeProvider;
     }
 }
